--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
 title: Transfer Learning in Medical Imaging
+description: This is our project page for MICCAI-21 submission.
